--- a/spring-boot-user-beans-starter/src/main/resources/static/index.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/index.html
@@ -5,10 +5,17 @@
     <title>Graphs</title>
 </head>
 <body>
-    <h1>Graphs</h1>
+    <h1>Spring Boot User Beans</h1>
+    <h2>Graphs</h2>
     <ul>
-        <li><a href="graph1.html">Alternative 1</a></li>
-        <li><a href="graph2.html">Alternative 2</a></li>
+        <li><a href="graph1.html" target="_blank">Alternative 1</a></li>
+        <li><a href="graph2.html" target="_blank">Alternative 2</a></li>
+    </ul>
+    <h2>API</h2>
+    <ul>
+        <li><a href="/api/v1/user-beans/dependencies" target="_blank">/api/v1/user-beans/dependencies</a></li>
+        <li><a href="/api/v1/user-beans/dependencies/packages" target="_blank">/api/v1/user-beans/dependencies/packages</a></li>
+        <li><a href="/api/v1/user-beans/beans" target="_blank">/api/v1/user-beans/beans</a></li>
     </ul>
 </body>
 </html>
