First iteration to connect beans with jars

--- a/spring-boot-user-beans-starter/src/main/resources/static/index.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/index.html
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="/api/v1/user-beans/dependencies" target="_blank">/api/v1/user-beans/dependencies</a></li>
         <li><a href="/api/v1/user-beans/dependencies/packages" target="_blank">/api/v1/user-beans/dependencies/packages</a></li>
+        <li><a href="/api/v1/user-beans/dependencies/beans" target="_blank">/api/v1/user-beans/dependencies/beans</a></li>
         <li><a href="/api/v1/user-beans/beans" target="_blank">/api/v1/user-beans/beans</a></li>
     </ul>
 </body>
