Moving the endpoints to actuator

--- a/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
@@ -38,7 +38,7 @@ text {
   <script src="//d3js.org/d3.v3.min.js"></script>
   <script>
 
-fetch("/graph2")
+fetch("/actuator/userbeans/graph2")
 .then(response => response.json())
 .then(data => {
 
@@ -125,3 +125,5 @@ fetch("/graph2")
 });
 
 </script>
+</body>
+</html>
