small changes to pass sonar

--- a/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang="en">
+  <head>
+  <meta charset="utf-8">
+  <title>Graph2</title>
 <style>
 
 .link {
@@ -33,9 +36,13 @@ text {
 }
 
 </style>
+</head>
 <body>
   <!-- TODO Upgrade to d3.v7.min.js -->
-  <script src="//d3js.org/d3.v3.min.js"></script>
+  <script
+    src="//d3js.org/d3.v3.min.js"
+    integrity="sha384-N8EP0Yml0jN7e0DcXlZ6rt+iqKU9Ck6f1ZQ+j2puxatnBq4k9E8Q6vqBcY34LNbn"
+    crossorigin="anonymous"></script>
   <script>
 
 fetch("/actuator/userbeans/graph2")
