--- a/spring-boot-user-beans-starter/src/main/resources/static/graph1.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/graph1.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>Graph1</title>
     <style>
       .links line {
         stroke: #999;
