--- a/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
@@ -91,6 +91,7 @@
     fetch(address)
       .then(response => response.json())
       .then(data => {
+        console.log(data);
 
         var links = data;
         var nodes = {};
