--- a/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
@@ -1,136 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
   <meta charset="utf-8">
   <title>Graph2</title>
-<style>
+  <style>
+    .link {
+      fill: none;
+      stroke: #666;
+      stroke-width: 1.5px;
+    }
 
-.link {
-  fill: none;
-  stroke: #666;
-  stroke-width: 1.5px;
-}
+    #licensing {
+      fill: green;
+    }
 
-#licensing {
-  fill: green;
-}
+    .link.licensing {
+      stroke: green;
+    }
 
-.link.licensing {
-  stroke: green;
-}
+    .link.resolved {
+      stroke-dasharray: 0, 2 1;
+    }
 
-.link.resolved {
-  stroke-dasharray: 0,2 1;
-}
+    circle {
+      fill: #ccc;
+      stroke: #333;
+      stroke-width: 1.5px;
+    }
 
-circle {
-  fill: #ccc;
-  stroke: #333;
-  stroke-width: 1.5px;
-}
-
-text {
-  font: 10px sans-serif;
-  pointer-events: none;
-  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
-}
-
-</style>
+    text {
+      font: 10px sans-serif;
+      pointer-events: none;
+      text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+    }
+  </style>
 </head>
+
 <body>
+
+  <script>
+
+    function validateForm() {
+
+      var jar = document.getElementById("jars").value;
+      console.log(jar)
+      document.location.href="/actuator/userbeans?dependency=" + jar;
+      return false;
+    }
+
+  </script>
+
+  <form method="get" action="/actuator/userbeans" onsubmit="return validateForm()">
+    <select id="jars"></select>
+    <input type="submit" value="Update">
+  </form>
+
+  <script>
+    fetch('/actuator/userbeans/graph2-combo')
+      .then(response => response.json())
+      .then(data => {
+        var selectElement = document.getElementById('jars');
+        data.forEach(obj => {
+          var option = document.createElement('option');
+          option.value = obj.dependency;
+          option.textContent = obj.value;
+          selectElement.appendChild(option);
+        });
+      })
+      .catch(error => console.log(error));
+  </script>
   <!-- TODO Upgrade to d3.v7.min.js -->
-  <script
-    src="//d3js.org/d3.v3.min.js"
+  <script src="//d3js.org/d3.v3.min.js"
     integrity="sha384-N8EP0Yml0jN7e0DcXlZ6rt+iqKU9Ck6f1ZQ+j2puxatnBq4k9E8Q6vqBcY34LNbn"
     crossorigin="anonymous"></script>
   <script>
 
-fetch("/actuator/userbeans/graph2")
-.then(response => response.json())
-.then(data => {
+    const queryString = window.location.search;
+    console.log(queryString);
+    const urlParams = new URLSearchParams(queryString);
+    const dependency = urlParams.get('dependency')
+    console.log(dependency);
 
-  var links = data;
-  var nodes = {};
+    var address = "/actuator/userbeans/graph2";
 
-  // Compute the distinct nodes from the links.
-  links.forEach(function(link) {
-    link.source = nodes[link.source] || (nodes[link.source] = {name: link.source});
-    link.target = nodes[link.target] || (nodes[link.target] = {name: link.target});
-  });
+    if(dependency != null) {
+        address += "?dependency=" + dependency
+    }
 
-  var width = 2000,
-      height = 2000;
+    fetch(address)
+      .then(response => response.json())
+      .then(data => {
+        console.log(data);
 
-  var force = d3.layout.force()
-      .nodes(d3.values(nodes))
-      .links(links)
-      .size([width, height])
-      .linkDistance(60)
-      .charge(-300)
-      .on("tick", tick)
-      .start();
+        var links = data;
+        var nodes = {};
 
-  var svg = d3.select("body")
-      .append("svg")
-      .attr("width", width)
-      .attr("height", height);
+        // Compute the distinct nodes from the links.
+        links.forEach(function (link) {
+          link.source = nodes[link.source] || (nodes[link.source] = { name: link.source });
+          link.target = nodes[link.target] || (nodes[link.target] = { name: link.target });
+        });
 
-  // Per-type markers, as they don't inherit styles.
-  svg.append("defs").selectAll("marker")
-      .data(["suit", "licensing", "resolved"])
-      .enter().append("marker")
-      .attr("id", function(d) { return d; })
-      .attr("viewBox", "0 -5 10 10")
-      .attr("refX", 15)
-      .attr("refY", -1.5)
-      .attr("markerWidth", 6)
-      .attr("markerHeight", 6)
-      .attr("orient", "auto")
-      .append("path")
-      .attr("d", "M0,-5L10,0L0,5");
+        var width = 2000,
+          height = 2000;
 
-  var path = svg.append("g").selectAll("path")
-      .data(force.links())
-      .enter().append("path")
-      .attr("class", function(d) { return "link " + d.type; })
-      .attr("marker-end", function(d) { return "url(#" + d.type + ")"; });
+        var force = d3.layout.force()
+          .nodes(d3.values(nodes))
+          .links(links)
+          .size([width, height])
+          .linkDistance(60)
+          .charge(-300)
+          .on("tick", tick)
+          .start();
 
-  var circle = svg.append("g").selectAll("circle")
-      .data(force.nodes())
-      .enter().append("circle")
-      .attr("r", 6)
-      .call(force.drag);
+        var svg = d3.select("body")
+          .append("svg")
+          .attr("width", width)
+          .attr("height", height);
 
-  var text = svg.append("g").selectAll("text")
-      .data(force.nodes())
-      .enter().append("text")
-      .attr("x", 8)
-      .attr("y", ".31em")
-      .text(function(d) { return d.name; });
+        // Per-type markers, as they don't inherit styles.
+        svg.append("defs").selectAll("marker")
+          .data(["suit", "licensing", "resolved"])
+          .enter().append("marker")
+          .attr("id", function (d) { return d; })
+          .attr("viewBox", "0 -5 10 10")
+          .attr("refX", 15)
+          .attr("refY", -1.5)
+          .attr("markerWidth", 6)
+          .attr("markerHeight", 6)
+          .attr("orient", "auto")
+          .append("path")
+          .attr("d", "M0,-5L10,0L0,5");
 
-  // Use elliptical arc path segments to doubly-encode directionality.
-  function tick() {
-    path.attr("d", linkArc);
-    circle.attr("transform", transform);
-    text.attr("transform", transform);
-  }
+        var path = svg.append("g").selectAll("path")
+          .data(force.links())
+          .enter().append("path")
+          .attr("class", function (d) { return "link " + d.type; })
+          .attr("marker-end", function (d) { return "url(#" + d.type + ")"; });
 
-  function linkArc(d) {
-    var dx = d.target.x - d.source.x,
-        dy = d.target.y - d.source.y,
-        dr = Math.sqrt(dx * dx + dy * dy);
-    return "M" + d.source.x + "," + d.source.y + "A" + dr + "," + dr + " 0 0,1 " + d.target.x + "," + d.target.y;
-  }
+        var circle = svg.append("g").selectAll("circle")
+          .data(force.nodes())
+          .enter().append("circle")
+          .attr("r", 6)
+          .call(force.drag);
 
-  function transform(d) {
-    return "translate(" + d.x + "," + d.y + ")";
-  }
+        var text = svg.append("g").selectAll("text")
+          .data(force.nodes())
+          .enter().append("text")
+          .attr("x", 8)
+          .attr("y", ".31em")
+          .text(function (d) { return d.name; });
 
-})
-.catch(error => {
-  console.log('Error:', error);
-});
+        // Use elliptical arc path segments to doubly-encode directionality.
+        function tick() {
+          path.attr("d", linkArc);
+          circle.attr("transform", transform);
+          text.attr("transform", transform);
+        }
 
-</script>
+        function linkArc(d) {
+          var dx = d.target.x - d.source.x,
+            dy = d.target.y - d.source.y,
+            dr = Math.sqrt(dx * dx + dy * dy);
+          return "M" + d.source.x + "," + d.source.y + "A" + dr + "," + dr + " 0 0,1 " + d.target.x + "," + d.target.y;
+        }
+
+        function transform(d) {
+          return "translate(" + d.x + "," + d.y + ")";
+        }
+
+      })
+      .catch(error => {
+        console.log('Error:', error);
+      });
+
+  </script>
 </body>
+
 </html>
