Inital progress with the filter; not enough

--- a/examples/hello-world/src/main/resources/static/index.html
+++ b/examples/hello-world/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
     <h1>Spring Boot User Beans</h1>
     <h2>Graphs</h2>
     <ul>
+        <li><a href="/graph1.html" target="_blank">Alternative 1</a></li>
         <li><a href="/actuator/userbeans" target="_blank">Alternative 2</a></li>
     </ul>
     <h2>API</h2>
