Adding a graph from Chat GTP

--- a/examples/hello-world/src/main/resources/static/index.html
+++ b/examples/hello-world/src/main/resources/static/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/graph1.html" target="_blank">Alternative 1</a></li>
         <li><a href="/actuator/userbeans" target="_blank">Alternative 2</a></li>
+        <li><a href="/graph3.html" target="_blank">Alternative 3</a></li>
     </ul>
     <h2>API</h2>
     <ul>
