First iteration with the cleanup process

--- a/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/graph2.html
@@ -82,7 +82,7 @@
     const dependency = urlParams.get('dependency')
     console.log(dependency);
 
-    var address = "/actuator/userbeans/graph2";
+    var address = "graph2.json";
 
     if(dependency != null) {
         address += "?dependency=" + dependency
