--- a/spring-boot-user-beans-starter/src/main/resources/static/graph.html
+++ b/spring-boot-user-beans-starter/src/main/resources/static/graph.html
@@ -42,6 +42,11 @@
             margin-right: 5px;
         }
 
+        #logo select {
+            width: 200px;
+            margin-right: 5px;
+        }
+
         #logo button {
             margin-right: 5px;
         }
@@ -51,11 +56,40 @@
 <!-- Web form -->
 <div id="logo">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Spring_Framework_Logo_2018.svg/490px-Spring_Framework_Logo_2018.svg.png?20181210015349" alt="Spring Framework Logo">
+    <select id="jars"></select>
     <input type="text" id="searchInput" placeholder="Bean name or package" />
     <button id="searchButton">Search</button>
     <button id="resetButton">Reset</button>
 </div>
 <div id="searchResultMessage"></div>
+
+<script>
+    var combo = "/actuator/userbeans/graph-combo";
+    //var combo = "graph-combo.json";
+
+    fetch(combo)
+        .then(response => response.json())
+        .then(data => {
+            var selectElement = document.getElementById('jars');
+            //Add All
+            var option = document.createElement('option');
+            option.value = "ALL";
+            option.textContent = "ALL";
+            selectElement.appendChild(option);
+            //Add UNKNOWN
+            var option2 = document.createElement('option');
+            option2.value = "UNKNOWN";
+            option2.textContent = "UNKNOWN";
+            selectElement.appendChild(option2);
+            data.forEach(obj => {
+                var option = document.createElement('option');
+                option.value = obj.dependency;
+                option.textContent = obj.dependency;
+                selectElement.appendChild(option);
+            });
+        })
+        .catch(error => console.log(error));
+</script>
 
 <script>
     const svg = d3.create("svg")
@@ -125,8 +159,8 @@
             }))
             .filter((link) => link.target !== null);
 
-        console.log("Printing links")
-        console.log(links)
+        //console.log("Printing links")
+        //console.log(links)
 
         linksRaw = data
             .map((d) => ({
@@ -145,8 +179,8 @@
             package: data.find((item) => item.source.beanName === d)?.source.beanPackage || ""
         }));
 
-        console.log("Printing nodes")
-        console.log(nodes)
+        //console.log("Printing nodes")
+        //console.log(nodes)
 
         simulation.nodes(nodes);
         simulation.force("link").links(links);
