returning actuator root endpoint to userbeans

--- a/examples/hello-world-reactive/src/main/resources/static/index.html
+++ b/examples/hello-world-reactive/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
     <h1>Spring Boot User Beans</h1>
     <h2>Graphs</h2>
     <ul>
-        <li><a href="/actuator/user-beans" target="_blank">Show the beans</a></li>
+        <li><a href="/actuator/userbeans" target="_blank">Show the beans</a></li>
     </ul>
 </body>
 </html>
