--- a/spring-boot-starter-user-beans/src/main/resources/static/graph.html
+++ b/spring-boot-starter-user-beans/src/main/resources/static/graph.html
@@ -79,11 +79,11 @@ A D3.js Graph developed after a long conversation between:
 <script>
 
     //Web document configuration
-    var combo = "/actuator/userbeans/graph-combo";
-    //var combo = "graph-combo.json";
+    //var combo = "/actuator/userbeans/graph-combo";
+    var combo = "graph-combo.json";
 
-    var address = "/actuator/userbeans/graph";
-    //var address = "graph.json";
+    //var address = "/actuator/userbeans/graph";
+    var address = "graph.json";
 
     document.addEventListener("DOMContentLoaded", function(event) {
 
@@ -217,6 +217,15 @@ A D3.js Graph developed after a long conversation between:
                 ...linksRaw.map((d) => d.target)
             ]);
 
+            //New way
+            const nodes = data.nodes.map((d, index) => ({
+                id: d.beanName,
+                name: d.beanName,
+                package: d.beanPackage,
+                dependency: d.dependency
+            }));
+
+            /*
             nodes = Array.from(nodesSet)
                 .filter((d) => d !== null) //TODO Clue that it is possible to improve the Graph generation
                 .map((d) => ({
@@ -226,11 +235,13 @@ A D3.js Graph developed after a long conversation between:
                     dependency: data.edges.find((item) => item.source.beanName === d)?.source.dependency || ""
             }));
 
+             */
+
             console.log("Printing nodes")
             console.log(nodes)
 
             simulation.nodes(nodes);
-            simulation.force("link").links(links);
+            //simulation.force("link").links(links);
 
             link = container.append("g")
                 .attr("class", "links")
