--- a/spring-boot-starter-user-beans/src/main/resources/static/details.html
+++ b/spring-boot-starter-user-beans/src/main/resources/static/details.html
@@ -2,7 +2,7 @@
 D3.js Graph developed between a long conversation between:
 
 - Juan Antonio Breña Moral
-- Chat GTP
+- Chat GPT
 -->
 <!DOCTYPE html>
 <html>
